replaced all calls to NetworkImpl.getLink(Id) and NetworkImpl.getLink(String) with calls to Network.getLinks().get(Id), removed the two non-api-methods from NetworkImpl. Did the same with NetworkImpl.getNode(Id) and NetworkImpl.getNode(String).
git-svn-id: file:///srv/local/data/cleanRepo/trunk@9918 a0517364-e873-4167-b1c8-416daa5a6b91